# smbctl

./: LICENSE  README.md  pyproject.toml
smbctl/: cli.py  client.py  server.py
