[project]
name = "smbctl"
version = "0.0.1"
description = "SMB client and server toolkit"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kevin Carrion (contact via GitHub: @kevinzl13)" }]
maintainers = [{ name = "kevinzl" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/kevinzl13/smbctl.git"

[project.scripts]
smbctl = "smbctl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
